--- a/app/views/detail_atraksi.html
+++ b/app/views/detail_atraksi.html
@@ -245,8 +245,8 @@
     </div>
   </div>
   <!-- other info goes here -->
-  <div class="container container--full">
-    <div class="container">
+  <div class="container container--full overflow_visible">
+    <div class="container overflow_visible">
       <!-- tambahkan class comment-section -->
       <div class="row row--withmargi comment-section">
         <div class="col-md-8">
