--- a/app/views/detail_hotel.html
+++ b/app/views/detail_hotel.html
@@ -231,8 +231,8 @@
     </div>
   </div>
   <!-- other info goes here -->
-  <div class="container container--full">
-    <div class="container">
+  <div class="container container--full overflow_visible">
+    <div class="container overflow_visible">
       <!-- tambahkan class comment-section -->
       <div class="row row--withmargin comment-section">
         <div class="col-md-8">
