updates mobile all plans

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -8881,10 +8881,19 @@ header.fixed-header .header-container {
 
 .modal-plan-destinasi .with--map .planbox-container {
   position: relative;
-  overflow: auto;
+  overflow: hidden;
   height: 100%;
-  padding-top: 50px;
-  padding-bottom: 50px;
+}
+
+@media (max-width: 768px) {
+  .modal-plan-destinasi .with--map .planbox-container {
+    height: 240px;
+    z-index: 4;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+  }
 }
 
 .modal-plan-destinasi .with--map .map-place {
@@ -8893,6 +8902,12 @@ header.fixed-header .header-container {
   width: 100%;
   height: 100%;
   position: relative;
+}
+
+@media (max-width: 768px) {
+  .modal-plan-destinasi .with--map .map-place {
+    padding-bottom: 10px;
+  }
 }
 
 .modal-plan-destinasi .with--map .map-place-container {
@@ -9175,6 +9190,38 @@ header.fixed-header .header-container {
 .modal-plan-destinasi .planbox-action .planbox-button-action > button + button {
   margin-left: 4px;
   color: white;
+}
+
+.modal--map_container {
+  position: absolute;
+  top: 50px;
+  left: 15px;
+  right: 0;
+  bottom: 0;
+}
+
+.modal--map_container .swiper-container {
+  width: 100%;
+  height: 100%;
+  overflow: visible;
+}
+
+.modal--map_container .swiper-slide {
+  /* Center slide text vertically */
+}
+
+.modal--map_container .swiper-slide .modal-pd-planbox {
+  margin-bottom: 0px;
+}
+
+.modal--map_container .swiper-slide .modal-pd-planbox:hover {
+  transform: translate(0);
+  box-shadow: none;
+}
+
+.modal--map_container .swiper-slide.swiper-slide-active .modal-pd-planbox {
+  transform: translateY(-10px);
+  box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.1);
 }
 
 .konfirmasi_pembayaran {
