--- a/app/views/plan_destinasi.html
+++ b/app/views/plan_destinasi.html
@@ -1,4 +1,3 @@
-<script src="js/view/plan_destinasi.js" charset="utf-8"></script>
 <div class="container container--full grey">
   <div class="plan-destinasi-board">
     <div class="container">
@@ -138,10 +137,9 @@
       </div>
     </div>
   </div>
-
 </div>
 
-<div class="modal-overlay modal-plan-destinasi">
+<div class="modal-overlay modal-plan-destinasi active">
   <div class="close-modal-container">
     <div class=" btn-js-action close-btn" data-action="close-modal">
     </div>
@@ -224,7 +222,7 @@
                   <label for="resto" class="">Resto</label>
                 </div>
 
-
+ 
             </div>
 
             <div class="mcf-action row ">
@@ -296,100 +294,180 @@
 
           </div>
         </div>
-        <div class="col-lg-4 col-sm-6 col-xs-12  planbox-container ">
-          <div class="modal-pd-planbox">
-            <div class="planbox-description">
-              <div class="planbox-img">
-                <img class="middle-both" src="images/dummy/dummy.jpg" alt="dummy img">
-              </div>
-              <div class="planbox-text">
-                <div class="planbox-destination">
-                  <span>ATRAKSI</span>
-                  <p>Ranca Upas</p>
-                </div>
-                <div class="planbox-rating star-rating" data-star="5" >
-                  <div class="rating-container">
-
+        <div class="col-md-4 col-xs-12  planbox-container ">
+          <div class="modal--map_container">
+              <div class="swiper-container">
+                  <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="modal-pd-planbox">
+                            <div class="planbox-description">
+                              <div class="planbox-img">
+                                <img class="middle-both" src="images/dummy/dummy.jpg" alt="dummy img">
+                              </div>
+                              <div class="planbox-text">
+                                <div class="planbox-destination">
+                                  <span>ATRAKSI</span>
+                                  <p>Ranca Upas</p>
+                                </div>
+                                <div class="planbox-rating star-rating" data-star="5" >
+                                  <div class="rating-container">
+                
+                                  </div>
+                                  <span>240 reviews</span>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="planbox-action">
+                              <div class="planbox-price">
+                                <div class="price-box">
+                                  Rp 2.000.000
+                                </div>
+                              </div>
+                              <div class="planbox-button-action">
+                                <button class="btn small">Lihat Detail</button>
+                                <button class="btn btn--orange small">Tambahkan</button>
+                              </div>
+                            </div>
+                          </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="modal-pd-planbox">
+                            <div class="planbox-description">
+                              <div class="planbox-img">
+                                <img class="middle-both" src="images/dummy/dummy.jpg" alt="dummy img">
+                              </div>
+                              <div class="planbox-text">
+                                <div class="planbox-destination">
+                                  <span>ATRAKSI</span>
+                                  <p>Ranca Upas</p>
+                                </div>
+                                <div class="planbox-rating star-rating" data-star="5" >
+                                  <div class="rating-container">
+                
+                                  </div>
+                                  <span>240 reviews</span>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="planbox-action">
+                              <div class="planbox-price">
+                                <div class="price-box">
+                                  Rp 2.000.000
+                                </div>
+                              </div>
+                              <div class="planbox-button-action">
+                                <button class="btn small">Lihat Detail</button>
+                                <button class="btn btn--orange small">Tambahkan</button>
+                              </div>
+                            </div>
+                          </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="modal-pd-planbox">
+                            <div class="planbox-description">
+                              <div class="planbox-img">
+                                <img class="middle-both" src="images/dummy/dummy.jpg" alt="dummy img">
+                              </div>
+                              <div class="planbox-text">
+                                <div class="planbox-destination">
+                                  <span>ATRAKSI</span>
+                                  <p>Ranca Upas</p>
+                                </div>
+                                <div class="planbox-rating star-rating" data-star="5" >
+                                  <div class="rating-container">
+                
+                                  </div>
+                                  <span>240 reviews</span>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="planbox-action">
+                              <div class="planbox-price">
+                                <div class="price-box">
+                                  Rp 2.000.000
+                                </div>
+                              </div>
+                              <div class="planbox-button-action">
+                                <button class="btn small">Lihat Detail</button>
+                                <button class="btn btn--orange small">Tambahkan</button>
+                              </div>
+                            </div>
+                          </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="modal-pd-planbox">
+                            <div class="planbox-description">
+                              <div class="planbox-img">
+                                <img class="middle-both" src="images/dummy/dummy.jpg" alt="dummy img">
+                              </div>
+                              <div class="planbox-text">
+                                <div class="planbox-destination">
+                                  <span>ATRAKSI</span>
+                                  <p>Ranca Upas</p>
+                                </div>
+                                <div class="planbox-rating star-rating" data-star="5" >
+                                  <div class="rating-container">
+                
+                                  </div>
+                                  <span>240 reviews</span>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="planbox-action">
+                              <div class="planbox-price">
+                                <div class="price-box">
+                                  Rp 2.000.000
+                                </div>
+                              </div>
+                              <div class="planbox-button-action">
+                                <button class="btn small">Lihat Detail</button>
+                                <button class="btn btn--orange small">Tambahkan</button>
+                              </div>
+                            </div>
+                          </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="modal-pd-planbox">
+                            <div class="planbox-description">
+                              <div class="planbox-img">
+                                <img class="middle-both" src="images/dummy/dummy.jpg" alt="dummy img">
+                              </div>
+                              <div class="planbox-text">
+                                <div class="planbox-destination">
+                                  <span>ATRAKSI</span>
+                                  <p>Ranca Upas</p>
+                                </div>
+                                <div class="planbox-rating star-rating" data-star="5" >
+                                  <div class="rating-container">
+                
+                                  </div>
+                                  <span>240 reviews</span>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="planbox-action">
+                              <div class="planbox-price">
+                                <div class="price-box">
+                                  Rp 2.000.000
+                                </div>
+                              </div>
+                              <div class="planbox-button-action">
+                                <button class="btn small">Lihat Detail</button>
+                                <button class="btn btn--orange small">Tambahkan</button>
+                              </div>
+                            </div>
+                          </div>
+                    </div>
                   </div>
-                  <span>240 reviews</span>
+                  <!-- Add Pagination -->
+                  <div class="swiper-pagination"></div>
                 </div>
-              </div>
-            </div>
-            <div class="planbox-action">
-              <div class="planbox-price">
-                <div class="price-box">
-                  Rp 2.000.000
-                </div>
-              </div>
-              <div class="planbox-button-action">
-                <button class="btn small">Lihat Detail</button>
-                <button class="btn btn--orange small">Tambahkan</button>
-              </div>
-            </div>
-          </div>
-          <div class="modal-pd-planbox">
-            <div class="planbox-description">
-              <div class="planbox-img">
-                <img class="middle-both" src="images/dummy/dummy.jpg" alt="dummy img">
-              </div>
-              <div class="planbox-text">
-                <div class="planbox-destination">
-                  <span>ATRAKSI</span>
-                  <p>Ranca Upas</p>
-                </div>
-                <div class="planbox-rating star-rating" data-star="5" >
-                  <div class="rating-container">
-
-                  </div>
-                  <span>240 reviews</span>
-                </div>
-              </div>
-            </div>
-            <div class="planbox-action">
-              <div class="planbox-price">
-                <div class="price-box">
-                  Rp 2.000.000
-                </div>
-              </div>
-              <div class="planbox-button-action">
-                <button class="btn small">Lihat Detail</button>
-                <button class="btn btn--orange small">Tambahkan</button>
-              </div>
-            </div>
-          </div>
-          <div class="modal-pd-planbox">
-            <div class="planbox-description">
-              <div class="planbox-img">
-                <img class="middle-both" src="images/dummy/dummy.jpg" alt="dummy img">
-              </div>
-              <div class="planbox-text">
-                <div class="planbox-destination">
-                  <span>ATRAKSI</span>
-                  <p>Ranca Upas</p>
-                </div>
-                <div class="planbox-rating star-rating" data-star="5" >
-                  <div class="rating-container">
-
-                  </div>
-                  <span>240 reviews</span>
-                </div>
-              </div>
-            </div>
-            <div class="planbox-action">
-              <div class="planbox-price">
-                <div class="price-box">
-                  Rp 2.000.000
-                </div>
-              </div>
-              <div class="planbox-button-action">
-                <button class="btn small">Lihat Detail</button>
-                <button class="btn btn--orange small">Tambahkan</button>
-              </div>
-            </div>
           </div>
         </div>
       </div>
     </div>
+
+    
     <div id="default" class="modal-pd-body container active">
         <div class="nav-btn nav-btn-left">
           <i class="fa fa-angle-left middle-both" aria-hidden="true"></i>
@@ -597,3 +675,6 @@
     </div>
   </div>
 </div>
+
+<script src="js/plugins/swiper.min.js" charset="utf-8"></script>
+<script src="js/view/plan_destinasi.js" charset="utf-8"></script>
