--- a/app/sass/pages/_plan_destinasi.scss
+++ b/app/sass/pages/_plan_destinasi.scss
@@ -776,10 +776,16 @@
     }
     .planbox-container{
       position: relative;
-      overflow: auto;
+      overflow: hidden ;
       height: 100%;
-      padding-top: 50px;
-      padding-bottom: 50px;
+      @media (max-width : 768px){
+        height: 240px ; 
+        z-index: 4 ;
+        position: absolute ; 
+        left: 0 ;
+        right: 0 ;
+        bottom: 0;
+      }
     }
     .map-place{
       padding-top: 50px;
@@ -787,6 +793,9 @@
       width: 100%;
       height: 100%;
       position: relative;
+      @media (max-width : 768px){
+        padding-bottom: 10px;
+      }
     }
     .map-place-container{
       position: absolute;
@@ -1023,6 +1032,35 @@
           margin-left: 4px;
           color: white;
         }
+      }
+    }
+  }
+}
+
+.modal--map_container{
+  position:absolute;
+  top: 50px;
+  left: 15px;
+  right: 0;
+  bottom: 0;
+  .swiper-container {
+    width: 100%;
+    height: 100%;
+    overflow: visible;
+  }
+  .swiper-slide {
+    /* Center slide text vertically */
+    .modal-pd-planbox{
+      margin-bottom: 0px;
+      &:hover{
+        transform: translate(0);
+        box-shadow: none ; 
+      }
+    }
+    &.swiper-slide-active{
+      .modal-pd-planbox{
+        transform: translateY(-10px);
+        box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.1);
       }
     }
   }
