--- a/app/sass/pages/_home.scss
+++ b/app/sass/pages/_home.scss
@@ -570,6 +570,21 @@
 		}
 	}
 }
+.home-smallgrid__play{
+	position: absolute;
+	top: 10px;
+	left: 10px;
+	span{
+		color: #fff;
+		font-size: 64px;
+		opacity: 0.6;
+	}
+}
+.home-smallgrid__play--small{
+	span{
+		font-size: 36px;
+	}
+}
 .home-smallgrid__default{
 	position: absolute;
 	top: 0;
