--- a/app/sass/pages/_recomended_plan.scss
+++ b/app/sass/pages/_recomended_plan.scss
@@ -135,3 +135,31 @@
 	text-align: center;
 	margin: 50px 0 150px;
 }
+.rp__grid{
+	padding: 0 8px;
+}
+.rp__bigcontent{
+	padding: 0;
+}
+.rp__smgrid{
+	margin-bottom: 15px;
+	.home-smallgrid{
+		height: 257px;
+	}
+	&:last-child{
+		margin: 0;
+	}
+}
+.rp__subtitle{
+	margin-bottom: 30px;
+	padding: 0 20px;
+	.home-wrapper__title{
+		margin-bottom: 20px;
+	}
+}
+.rp__atraksi{
+	margin-bottom: 50px;
+	&:last-child{
+		margin-bottom: 0;
+	}
+}
