video added to detail open trip, show available added to detail open trip

--- a/app/views/plan_destinasi.html
+++ b/app/views/plan_destinasi.html
@@ -121,6 +121,11 @@
               </div>
             </div>
             <div class="pd-cp-box subtotal">
+              <div class="open-modal-cart">
+                  <button class="btn btn-js-action no-btn" data-action="open-modal" data-actionFor="modal-total">
+                      <img src="images/icon/off.svg" alt="">
+                  </button>
+              </div>
               <div class="pd-cp-container">
                 <div class="pd-cp-text-label">
                   SUB TOTAL
@@ -139,7 +144,7 @@
   </div>
 </div>
 
-<div class="modal-overlay modal-plan-destinasi active">
+<div class="modal-overlay modal-plan-destinasi">
   <div class="close-modal-container">
     <div class=" btn-js-action close-btn" data-action="close-modal">
     </div>
@@ -148,6 +153,10 @@
     <div class="modal-pd-head">
       <div class="modal-pd-head-top container">
         <div class="modal-pd-description">
+          <div class="close-modal-mobile">
+              <div class=" btn-js-action close-btn" data-action="close-modal">
+                </div>
+          </div>
           <div class="modal-pd-desc-label">
             Bandung
           </div>
@@ -287,6 +296,7 @@
         </div>
       </div>
     </div>
+
     <div id="with-map" class="modal-pd-body container with--map">
       <div class="row">
         <div class="map-place col-md-8">
@@ -466,7 +476,6 @@
         </div>
       </div>
     </div>
-
     
     <div id="default" class="modal-pd-body container active">
         <div class="nav-btn nav-btn-left">
@@ -673,6 +682,66 @@
 
       </div>
     </div>
+
+  </div>
+</div>
+
+<div class="modal-overlay modal-total plan-destinasi">
+  <div class="modal-plan-destinasi-ov-body">
+      <div class="modal-pd-head">
+          <div class="modal-pd-head-top container">
+            <div class="modal-pd-description">
+              <div class="close-modal-mobile">
+                  <div class=" btn-js-action close-btn" data-action="close-modal">
+                    </div>
+              </div>
+              <div class="modal-pd-desc-label">
+                Rincian
+              </div>
+            </div>
+          </div>
+      </div>
+      <div class="modal-pd-body active">
+          <div class="plan-destinasi-cart-price">
+              <div class="pd-cp-inner">
+                <div class="pd-cp-box">
+                  <div class="pd-cp-text-label">
+                    21 APR
+                  </div>
+                  <div class="pd-cp-text-number">
+                    Rp. 0
+                  </div>
+                </div>
+                <div class="pd-cp-box">
+                  <div class="pd-cp-text-label">
+                    21 APR
+                  </div>
+                  <div class="pd-cp-text-number">
+                    Rp. 0
+                  </div>
+                </div>
+                <div class="pd-cp-box">
+                  <div class="pd-cp-text-label">
+                    21 APR
+                  </div>
+                  <div class="pd-cp-text-number">
+                    Rp. 0
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="pd-cp-box subtotal">
+                <div class="pd-cp-container">
+                  <div class="pd-cp-text-label">
+                    SUB TOTAL
+                  </div>
+                  <div class="pd-cp-text-number">
+                    Rp 80.000
+                  </div>
+                </div>
+                <button class="btn btn--orange btn--medium">PESAN</button>
+              </div>
+      </div>
   </div>
 </div>
 
