recomended location page

--- a/app/views/recomended_location.html
+++ b/app/views/recomended_location.html
@@ -55,7 +55,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-md-4 rp__grid">
+							<div class="row col-md-4 rp__grid">
 								<div class="rp__smgrid">
 									<!-- with video -->
 									<div class="home-smallgrid" style="background-image: url('./images/image-b.jpg');">
