--- a/app/sass/pages/_detail_opentrip.scss
+++ b/app/sass/pages/_detail_opentrip.scss
@@ -371,6 +371,9 @@
 .options-cards{
 	.cards-head{
 		position: relative;
+	}
+	.cards-body{
+		position: relative;
 		.btn--blue{
 			position: absolute;
 			right : 12px;
