--- a/app/views/detail_opentrip.html
+++ b/app/views/detail_opentrip.html
@@ -2,6 +2,7 @@
 <script src="js/plugins/sticky.js"></script>
 <script src="js/plugins/daterangepicker.js" charset="utf-8"></script>
 <script src="js/view/detail_atraksi.js" ></script>
+<script src="js/view/detail_opentrip.js" ></script>
 <div class="detail-container container container--full grey">
   <div class="detail-head op-detail__head" style="background-image:url('./images/opentrip_bg.jpeg')">
     <div class="videobackground">
@@ -142,7 +143,6 @@
                           1099467
                       </div>
                     </div>
-                    <button class="btn btn--blue btn--medium">Choose</button>
                   </div>
                   <div class="cards-body">
                     <div class="row">
@@ -157,6 +157,7 @@
                               </select>
                             </div>
                           </div>
+                          <button class="btn btn--blue btn--medium">Choose</button>
                     </div>
                   </div>
                 </div>
