--- a/app/views/plan_destinasi.html
+++ b/app/views/plan_destinasi.html
@@ -231,7 +231,7 @@
                   <label for="resto" class="">Resto</label>
                 </div>
 
- 
+
             </div>
 
             <div class="mcf-action row ">
@@ -306,7 +306,7 @@
         </div>
         <div class="col-md-4 col-xs-12  planbox-container ">
           <div class="modal--map_container">
-              <div class="swiper-container">
+              <div class="swiper-destinasi swiper-container">
                   <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <div class="modal-pd-planbox">
@@ -321,7 +321,7 @@
                                 </div>
                                 <div class="planbox-rating star-rating" data-star="5" >
                                   <div class="rating-container">
-                
+
                                   </div>
                                   <span>240 reviews</span>
                                 </div>
@@ -353,7 +353,7 @@
                                 </div>
                                 <div class="planbox-rating star-rating" data-star="5" >
                                   <div class="rating-container">
-                
+
                                   </div>
                                   <span>240 reviews</span>
                                 </div>
@@ -385,7 +385,7 @@
                                 </div>
                                 <div class="planbox-rating star-rating" data-star="5" >
                                   <div class="rating-container">
-                
+
                                   </div>
                                   <span>240 reviews</span>
                                 </div>
@@ -417,7 +417,7 @@
                                 </div>
                                 <div class="planbox-rating star-rating" data-star="5" >
                                   <div class="rating-container">
-                
+
                                   </div>
                                   <span>240 reviews</span>
                                 </div>
@@ -449,7 +449,7 @@
                                 </div>
                                 <div class="planbox-rating star-rating" data-star="5" >
                                   <div class="rating-container">
-                
+
                                   </div>
                                   <span>240 reviews</span>
                                 </div>
@@ -476,7 +476,7 @@
         </div>
       </div>
     </div>
-    
+
     <div id="default" class="modal-pd-body container active">
         <div class="nav-btn nav-btn-left">
           <i class="fa fa-angle-left middle-both" aria-hidden="true"></i>
