--- a/app/sass/pages/_detail_atraksi.scss
+++ b/app/sass/pages/_detail_atraksi.scss
@@ -236,6 +236,9 @@
         width: 100%;
         max-width: 680px;
         border-top: solid 1px #e4e4e4;
+        &.no-lines{
+          border-top: 0px solid transparent ; 
+        }
         img{
           display: inline-flex;
         }
