--- a/app/views/detail_atraksi.html
+++ b/app/views/detail_atraksi.html
@@ -4,7 +4,7 @@
       <div class="detail-desc">
         <div class="dd-top">
           <div class="dd-rate">
-            <h1>5</h1> 
+            <h1>5</h1>
           </div>
           <div class="dd-desc-text">
             <h5>Atraksi</h5>
@@ -47,10 +47,17 @@
   </div>
   <div class="container container--full white">
     <div class="container">
-      <div class="ccw-head">
-          <h1>Informasi Tambahan</h1>
+      <div class="word-navigation">
+        <ul>
+          <li>Itinerary</li>
+          <li class="active">Informasi tambahan</li>
+          <li>Syarat &amp; Ketentuan</li>
+        </ul>
       </div>
-      <div class="ccw-body">
+      <!-- <div class="ccw-head">
+          <h1>Informasi Tambahan</h1>
+      </div> -->
+      <div class="ccw-body no-lines">
         <div class="row">
           <div class="col-md-6">
             <div class="ccw-ico">
