--- a/app/sass/pages/_plan_destinasi.scss
+++ b/app/sass/pages/_plan_destinasi.scss
@@ -283,10 +283,12 @@
       left: 0;
       bottom: 0 ;
       right : 0 ;
-      height: 120px;
       overflow: hidden;
       z-index: 5;
       box-shadow: 0 -1px 4px 0 rgba(0, 0, 0, 0.06);
+      .pd-cp-inner{
+        margin-bottom: 0px;
+      }
       .pd-cp-box , .pd-cp-itn , .pd-cp-isolate-box{
         display: none;
         &.subtotal{
