--- a/app/views/plan_destinasi.html
+++ b/app/views/plan_destinasi.html
@@ -746,4 +746,5 @@
 </div>
 
 <script src="js/plugins/swiper.min.js" charset="utf-8"></script>
+<script src="js/plugins/sticky.js"></script>
 <script src="js/view/plan_destinasi.js" charset="utf-8"></script>
