404 and maintenance pages

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -10528,4 +10528,51 @@ header.fixed-header .header-container {
   }
 }
 
+.error {
+  position: relative;
+  height: calc(100vh - 60px);
+  background-color: #f9f9fb;
+}
+
+.error_wrapper {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 40%;
+}
+
+.error_wrapper img {
+  width: 100%;
+  margin-bottom: 52px;
+}
+
+.error_wrapper p {
+  width: 450px;
+  max-width: 100%;
+  margin: 24px auto 32px;
+}
+
+.error_wrapper button {
+  width: 200px;
+}
+
+@media (max-width: 1024px) {
+  .error_wrapper {
+    width: 60%;
+  }
+}
+
+@media (max-width: 568px) {
+  .error_wrapper {
+    width: 90%;
+  }
+  .error_wrapper img {
+    margin-bottom: 24px;
+  }
+  .error_wrapper p {
+    margin: 16px auto 24px;
+  }
+}
+
 /*# sourceMappingURL=style.css.map */
