--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -61,7 +61,8 @@
   'pages/plan_destinasi',
   'pages/konfirmasi',
   'pages/mitra',
-  'pages/static';
+  'pages/static',
+  'pages/404';
 
 // 7. Themes
 @import
